--- a/example_wl_egl/Makefile
+++ b/example_wl_egl/Makefile
@@ -1,4 +1,4 @@
-test:
+all: server client
 
 xdg_shell.c: xdg-shell.xml
 	wayland-scanner private-code xdg-shell.xml xdg-shell.c
@@ -6,5 +6,8 @@ xdg_shell.c: xdg-shell.xml
 xdg_shell.h: xdg-shell.xml
 	wayland-scanner client-header xdg-shell.xml xdg-shell.h
 
-test: xdg_shell.c xdg_shell.h egl-on-wayland-xdg.c
-	zig cc -o test xdg-shell.c egl-on-wayland-xdg.c -lwayland-egl -lwayland-client -lEGL -lGL -lGLEW
+client: client.c egl-on-wayland-xdg.c xdg_shell.c xdg_shell.h
+	zig cc -o client client.c xdg-shell.c -lwayland-egl -lwayland-client -lEGL -lGL -lGLEW
+
+server: server.c xdg_shell.c xdg_shell.h egl-on-wayland-xdg.c
+	zig cc -o server server.c xdg-shell.c -lwayland-egl -lwayland-client -lEGL -lGL -lGLEW
